# pycon-db-migration

./: README.md
app/: .env-example  README.md  config.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 929734aa6b92_feat_text_table_and_label_table.py
app/db/: base.py  base_class.py
app/models/: label.py  text.py
app/scripts/: init_db.sh
